# Quill-MCP

./: .gitignore  CONTRIBUTING.md  LICENSE  PRD.md  README.md  TESTING_REPORT.md  claude_desktop_config.json  fix_database.py  install.py  pyproject.toml
.claude/: settings.local.json
src/quill_mcp/: __init__.py  context_engine.py  database.py  server.py
